# push_swap

./: .nfs.20051057.0325  CMakeLists.txt  Makefile  README.md  apply_instr.c  apply_rr.c  apply_rrr.c  author  basic_sort.c  begin_sort.c  best_way_from_a_to_b.c  checker.c  easy_sort.c  errorstempfile.txt  global_sort.c  parse_args.c  push_swap.c  push_swap.h  push_swap_correction.txt  resulttempfile.txt  rotation_type.c  run.sh  sort_helper.c  stack_manipulations.c  testpushswap.sh
checker.dSYM/Contents/Resources/DWARF/: checker
libft/: Makefile  author
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/: ft_abs.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_unbase.c  ft_list_add_back.c  ft_list_last.c  ft_list_nth.c  ft_list_push_params.c  ft_list_reverse.c  ft_list_size.c  ft_lst_free_cont.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelcont.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_print_int_array.c  ft_print_list.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  (+35 more)
libft/srcs/ft_printf/: ft_printf.c  get_flags.c  helper.c  process_char.c  process_digit_id.c  process_digit_oux.c  process_percent.c  process_precision.c  process_ptr.c  process_wide_char.c  process_width.c
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
