cmake_minimum_required(VERSION 3.6)
project(push_swap)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra")

include_directories(libft/includes)
include_directories(.)

set(SOURCE_FILES
    libft/includes/ft_printf.h
    libft/includes/get_next_line.h
    libft/includes/libft.h
    libft/srcs/ft_printf/ft_printf.c
    libft/srcs/ft_printf/get_flags.c
    libft/srcs/ft_printf/helper.c
    libft/srcs/ft_printf/process_char.c
    libft/srcs/ft_printf/process_digit_id.c
    libft/srcs/ft_printf/process_digit_oux.c
    libft/srcs/ft_printf/process_percent.c
    libft/srcs/ft_printf/process_precision.c
    libft/srcs/ft_printf/process_ptr.c
    libft/srcs/ft_printf/process_wide_char.c
    libft/srcs/ft_printf/process_width.c
    libft/srcs/ft_abs.c
    libft/srcs/ft_atoi.c
    libft/srcs/ft_bzero.c
    libft/srcs/ft_isalnum.c
    libft/srcs/ft_isalpha.c
    libft/srcs/ft_isascii.c
    libft/srcs/ft_isdigit.c
    libft/srcs/ft_isprint.c
    libft/srcs/ft_itoa.c
    libft/srcs/ft_itoa_base.c
    libft/srcs/ft_itoa_unbase.c
    libft/srcs/ft_list_add_back.c
    libft/srcs/ft_list_last.c
    libft/srcs/ft_list_nth.c
    libft/srcs/ft_list_push_params.c
    libft/srcs/ft_list_reverse.c
    libft/srcs/ft_list_size.c
    libft/srcs/ft_lst_free_cont.c
    libft/srcs/ft_lstadd.c
    libft/srcs/ft_lstdel.c
    libft/srcs/ft_lstdelcont.c
    libft/srcs/ft_lstdelone.c
    libft/srcs/ft_lstiter.c
    libft/srcs/ft_lstmap.c
    libft/srcs/ft_lstnew.c
    libft/srcs/ft_memalloc.c
    libft/srcs/ft_memccpy.c
    libft/srcs/ft_memchr.c
    libft/srcs/ft_memcmp.c
    libft/srcs/ft_memcpy.c
    libft/srcs/ft_memdel.c
    libft/srcs/ft_memmove.c
    libft/srcs/ft_memset.c
    libft/srcs/ft_print_int_array.c
    libft/srcs/ft_print_list.c
    libft/srcs/ft_putchar.c
    libft/srcs/ft_putchar_fd.c
    libft/srcs/ft_putendl.c
    libft/srcs/ft_putendl_fd.c
    libft/srcs/ft_putnbr.c
    libft/srcs/ft_putnbr_fd.c
    libft/srcs/ft_putstr.c
    libft/srcs/ft_putstr_fd.c
    libft/srcs/ft_realloc.c
    libft/srcs/ft_strcat.c
    libft/srcs/ft_strchr.c
    libft/srcs/ft_strclr.c
    libft/srcs/ft_strcmp.c
    libft/srcs/ft_strcpy.c
    libft/srcs/ft_strdel.c
    libft/srcs/ft_strdup.c
    libft/srcs/ft_strequ.c
    libft/srcs/ft_striter.c
    libft/srcs/ft_striteri.c
    libft/srcs/ft_strjoin.c
    libft/srcs/ft_strlcat.c
    libft/srcs/ft_strlen.c
#    libft/srcs/ft_strlen_num.c
    libft/srcs/ft_strmap.c
    libft/srcs/ft_strmapi.c
    libft/srcs/ft_strncat.c
    libft/srcs/ft_strncmp.c
    libft/srcs/ft_strncpy.c
    libft/srcs/ft_strndup.c
    libft/srcs/ft_strnequ.c
    libft/srcs/ft_strnew.c
    libft/srcs/ft_strnstr.c
    libft/srcs/ft_strrchr.c
    libft/srcs/ft_strsplit.c
    libft/srcs/ft_strstr.c
    libft/srcs/ft_strsub.c
    libft/srcs/ft_strtrim.c
    libft/srcs/ft_tolower.c
    libft/srcs/ft_toupper.c
    libft/srcs/get_next_line.c
    apply_instr.c
#    checker.c
    easy_sort.c
    global_sort.c
    parse_args.c
    push_swap.c
    push_swap.h
    stack_manipulations.c)

add_executable(push_swap ${SOURCE_FILES})